# gen-website-private

./: .gcloudignore  .gitignore  README.md  app.yaml  cors-config.json  package.json  server.mjs
.github/workflows/: opengen_bucket_test.yml  publish_app_engine.yml  publish_private_website.yml  publish_private_website_example.yml  publish_static.yml  publish_website.yml  release.yml  set_cname.yml
private-website-cache/: package-lock.json  package.json  wrangler.toml
private-website-cache/src/: package-lock.json  package.json  worker.js  wrangler.toml
public/: index.html
public/example/: bar.html  foo.html
public/gen.dev/local-test/: index.html
public/gen.dev/local-test/a-directory/: index.html  page.html
public/gen.dev/local-test/a-directory/page/: index.html
scripts/: ensure_domain_mapping.sh  github_org_permission_transition.py  implicit_collaborators.py  org_permission_transition.py  org_permission_transition_data.py  pyproject.toml
src/: server.mjs  start.mjs
tests/: server_test.mjs
